k8s/flux/clusters/talos-cluster/infra/storage/rook-ceph-cluster/debug.yaml
# watch Rook Ceph cluster
# kubectl -n rook-ceph get cephcluster rook-ceph
---
# do for each node/disk
apiVersion: v1
kind: Pod
metadata:
  name: disk-wipe
  namespace: rook-ceph # must be privileged
spec:
  nodeSelector:
    kubernetes.io/hostname: talos-cp-01
  containers:
  - name: disk-wipe
    image: ubuntu:latest
    command:
    - "/bin/bash"
    - "-c"
    - "apt-get update && apt-get install -y gdisk && sgdisk --zap-all /dev/sda"
    securityContext:
      privileged: true
  restartPolicy: Never

# check disks and volumes
# talosctl get disks -n 172.21.0.4
# talosctl get discoveredvolumes -n 172.21.0.4
---
apiVersion: v1
kind: Pod
metadata:
  name: ceph-debug
  namespace: rook-ceph
spec:
  containers:
  - name: ceph-debug
    image: quay.io/ceph/ceph:v19
    command: [ "/bin/sleep", "infinity" ]
    volumeMounts:
    - name: config
      mountPath: /etc/ceph
  volumes:
  - name: mon-endpoints
    configMap:
      name: rook-ceph-mon-endpoints
  - name: ceph-admin-keyring
    secret:
      secretName: rook-ceph-admin-keyring
  - name: config
    emptyDir: {}

# kubectl exec -it -n rook-ceph ceph-debug -- bash
# ceph status
